crates/musli/tests/ui/packed_error.stderr
error: Only #[musli(default)] fields can be used at the end of packed containers
 --> tests/ui/packed_error.rs:7:13
  |
7 |     #[musli(default)]
  |             ^^^^^^^

error: Only #[musli(default)] fields can be used at the end of packed containers
  --> tests/ui/packed_error.rs:17:17
   |
17 |         #[musli(default)]
   |                 ^^^^^^^

error: In #[musli(Binary, ..)] an enum cannot be #[musli(packed)] when decoding
  --> tests/ui/packed_error.rs:24:9
   |
24 | #[musli(packed)]
   |         ^^^^^^

error: In #[musli(Binary, ..)] an enum cannot be #[musli(packed)] when decoding
  --> tests/ui/packed_error.rs:29:9
   |
29 | #[musli(packed)]
   |         ^^^^^^

error: A #[musli(transparent)] or #[musli(packed)] struct cannot have named fields
  --> tests/ui/packed_error.rs:37:13
   |
37 |     #[musli(name = "test")]
   |             ^^^^

error: A #[musli(transparent)] or #[musli(packed)] struct cannot have named fields
  --> tests/ui/packed_error.rs:43:38
   |
43 | struct DenyNamedPackedStruct(#[musli(name = "test")] String);
   |                                      ^^^^

error[E0428]: the name `DenyNamedPackedStruct` is defined multiple times
  --> tests/ui/packed_error.rs:43:1
   |
36 | struct DenyNamedPackedStruct {
   | ---------------------------- previous definition of the type `DenyNamedPackedStruct` here
...
43 | struct DenyNamedPackedStruct(#[musli(name = "test")] String);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `DenyNamedPackedStruct` redefined here
   |
   = note: `DenyNamedPackedStruct` must be defined only once in the type namespace of this module

error: A #[musli(transparent)] or #[musli(packed)] variant cannot have named fields
  --> tests/ui/packed_error.rs:50:17
   |
50 |         #[musli(name = "test")]
   |                 ^^^^

error: In #[musli(Binary, ..)] a #[musli(packed)] variant cannot be used in an enum using #[musli(tag)]
  --> tests/ui/packed_error.rs:46:9
   |
46 | #[musli(tag = "type")]
   |         ^^^

error: A #[musli(transparent)] or #[musli(packed)] variant cannot have named fields
  --> tests/ui/packed_error.rs:54:19
   |
54 |     Tuple(#[musli(name = "test")] String),
   |                   ^^^^

error: In #[musli(Binary, ..)] a #[musli(packed)] variant cannot be used in an enum using #[musli(tag)]
  --> tests/ui/packed_error.rs:58:9
   |
58 | #[musli(tag = "type")]
   |         ^^^
